deployment-app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-deployment
  labels:
    name: dev 
spec:
  replica: 2
  selector:
    matchLabels:
      slectr: select-this-pod
      app: my-app
      task: dev
  template:
    metadata:
      name: my-first-pod
      labels:
        name: dev
        app: my-app
        slectr: select-this-pod
    spec:
      containers:
        - name: my-container-1
          image: abhishekimage/mynginx:v1-release
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "300m"
              memory: "400mi"
            request:
              cpu: "200m"
              memory: "300mi"
