service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    env: dev
    app: app1
  namespace: default
spec:
  selector:
     env: dev
     app: app1
  type: NodePort
  ports:
    - name: http 
      port: 80
      targetPort: 80
